<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mnu_action_edit"
        android:orderInCategory="100"
        android:title="@string/edit" />

    <item
        android:id="@+id/mnu_action_preview"
        android:orderInCategory="101"
        android:title="@string/preview" />
    <item
        android:id="@+id/mnu_add_seputar"
        android:orderInCategory="102"
        android:title="@string/tambah_seputar" />

    <item
        android:id="@+id/mnu_action_send"
        android:orderInCategory="103"
        android:visible="false"
        android:title="@string/send_report" />

    <item
        android:id="@+id/mnu_action_hapus"
        android:orderInCategory="103"
        android:title="@string/hapus" />

</menu>